--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@
     transform: scale(0.8);
   }
 }
+@media (max-width: 480px){
+  .light .digit-text{ mix-blend-mode: normal; }
+}
+
 
 
 
@@ -462,4 +466,5 @@
   </script>
 </body>
 </html>
+
 
