--- a/index.html
+++ b/index.html
@@ -340,6 +340,16 @@
     background: rgba(255,255,255,0.55) !important;
   }
 }
+body::after{
+  content: "v-TEST-001";
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  color: rgba(255,255,255,0.6);
+  font: 12px/1 -apple-system,BlinkMacSystemFont,sans-serif;
+  z-index: 9999;
+}
+
 
 
 
@@ -514,6 +524,7 @@
   </script>
 </body>
 </html>
+
 
 
 
