--- a/index.html
+++ b/index.html
@@ -252,41 +252,35 @@
 
 
 /* 小屏适配 */
-@media (max-width: 480px){
-  /* 手机端：彻底压掉“泛光”，但保留圆润与厚度 */
+/* 触屏手机/平板（iPhone 横竖都算），稳定命中 */
+@media (hover: none) and (pointer: coarse){
+  /* 手机端：彻底压掉“泛光”，但保留厚度 */
   .digit-text{
     filter: none !important;
     -webkit-text-stroke: 1.0px currentColor !important;
     text-shadow: 0 0 0.4px currentColor !important;
   }
 
-  /* 浅色层：不要 halo（10/22px），否则必发光 */
+  /* 浅色层：去掉 halo + 不用 screen（否则像发光） */
   .light .digit-text{
     mix-blend-mode: normal !important;
     text-shadow: 0 0 0.4px currentColor !important;
+    filter: none !important;
     opacity: 0.92 !important;
   }
 
-  /* 你想手机日期更大，就改这里（别改 .date-line 的 40px 了） */
+  /* 日期字号：触屏设备统一走这个，不再受横竖屏宽度影响 */
   .date-line{
-    font-size: 18px !important;  /* iPhone 8 建议 16~20 */
+    font-size: 18px !important;   /* 你要更大就改这里 */
   }
 
-  /* 冒号别雾化，否则也像发光 */
+  /* 冒号别雾化 */
   .dot{
     filter: none !important;
-    background: rgba(255,255,255,0.55) !important;
+    background: rgba(255,255,255,0.8) !important;
   }
 }
-body::after{
-  content: "v-TEST-002";
-  position: fixed;
-  left: 10px;
-  bottom: 10px;
-  color: rgba(255,255,255,0.6);
-  font: 12px/1 -apple-system,BlinkMacSystemFont,sans-serif;
-  z-index: 9999;
-}
+
 
 
 
@@ -462,6 +456,7 @@ body::after{
   </script>
 </body>
 </html>
+
 
 
 
