--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
       const now = new Date();
       const h = String(now.getHours()).padStart(2, '0');
       const m = String(now.getMinutes()).padStart(2, '0');
-      const  = String(now.getSeconds()).padStart(2, '0');
+      const s = String(now.getSeconds()).padStart(2, '0');
 
-      const vals = { h0: h[0], h1: h[1], m0: m[0], m1: m[1], s0: [0], s1: [1] };
+      const vals = { h0: h[0], h1: h[1], m0: m[0], m1: m[1], s0: s[0], s1: s[1] };
 
       if (first) {
         Object.keys(vals).forEach(k => slots[k].setInstant(vals[k]));
